# zuko

./: Cargo.toml  LICENSE  README.md
src/: default_zuko.toml  main.rs  types.rs
src/commands/: init.rs  list.rs  mod.rs  solve.rs  sync.rs
src/config/: app_config.rs  db.rs  mod.rs  ui.rs  zuko_context.rs
src/db/: db_manager.rs  list.rs  mod.rs  zuko_cli.rs  zuko_user.rs
src/templates/: Readme.md.tera  main.java.tera  main.js.tera  main.py.tera  main.rb.tera  main.rs.tera
src/ui/: list.rs  mod.rs
src/utils/: bootstrap_solution.rs  db.rs  fuzzy_matcher.rs  mod.rs  parse_html.rs  serde_json_string.rs  ui.rs
