[package]
name = "zuko"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
libsql = { version = "0.33.4", package = "libsql-client" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
colored = "3.0"
chrono = "0.4.41"
anyhow = "1.0.98"
ratatui = "0.29.0"
crossterm = "0.29.0"
nucleo-matcher = "0.3"
termimad = "0.33.0"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.21.3"