[package]
name = "zuko"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.2"
dirs = "6.0"
colored = "3.0"
chrono = "0.4.41"
anyhow = "1.0.98"
ratatui = "0.29.0"
crossterm = "0.29.0"
nucleo-matcher = "0.3.1"
once_cell = "1.21.3"
libsql = "0.9.19"
tokio = "1.47.0"
inquire = "0.7.5"
derive_builder = "0.20.2"
tui-markdown = "0.3.5"
